--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,4 +2,13 @@
 @import "libraries/fonts";
 @import "base/reseat";
 @import "base/variables";
+@import "base/elements";
+@import "blocks/header";
+@import "blocks/promo";
+@import "blocks/about";
+@import "blocks/services";
+@import "blocks/works";
+@import "blocks/team";
+@import "blocks/reviews";
+@import "blocks/footer";
 @import "base/media";
