--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -4,7 +4,7 @@
   margin: 0 auto;
   padding: 75px 20px 0 20px;
   display: flex;
-
+  margin-bottom: 283px;
   justify-content: flex-end;
 }
 .menu {
