--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -4,14 +4,15 @@
   width: 100%;
   height: 100%;
   padding-bottom: 50px;
+  position: relative;
 }
 
 .wrapper {
   max-width: 1182px;
   height: 100%;
 }
+
 .promo__content {
-  margin-top: 283px;
   padding: 0 20px;
   flex-direction: column;
   justify-content: space-between;
@@ -19,7 +20,7 @@
   opacity: 0;
   text-align: center;
   position: absolute;
-  top: 0;
+  top: -100%;
   left: 0;
 }
 .promo__content_active {
@@ -41,9 +42,12 @@
   font-size: 20px;
   letter-spacing: 1.28px;
   color: #fff;
-  margin-bottom: 322px;
 }
 .promo__list {
+  position: absolute;
+  bottom: 35px;
+  left: calc(50% - 50px);
+
   display: flex;
   justify-content: center;
 }
@@ -59,7 +63,8 @@
     transform: scale(2);
     font-weight: bold;
 
-    padding-bottom: 15px;
+    padding-bottom: 5px;
+    margin-top: -5px;
     color: #fff;
     transition: all 0.5s;
     position: relative;
